# Task-based-Lattice-Boltzmann

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  main_benchmark.cpp  main_global.cpp  main_swap_framework.cpp  main_two_lattice_parallel.cpp  main_two_lattice_parallel_test.cpp  main_two_step_framework.cpp  parallel_shift_main.cpp  parallel_swap_main.cpp  parallel_two_lattice_framework_main.cpp  parallel_two_lattice_main.cpp  parallel_two_step_main.cpp  sequential_shift_main.cpp  sequential_two_lattice_main.cpp  sequential_two_step_main.cpp  strong_scaling.py  visualize_data.py  weak_scaling.py
hello_world_hpx/: CMakeLists.txt  helloWorld.cpp
hello_world_hpx/bob_the_builder/: CMakeCache.txt  Makefile  cmake_install.cmake  my_hpx_program
include/: access.hpp  boundaries.hpp  collision.hpp  defines.hpp  file_interaction.hpp  lbm_execution.hpp  macroscopic.hpp  parallel_framework.hpp  parallel_shift_framework.hpp  parallel_swap_framework.hpp  parallel_two_lattice.hpp  parallel_two_lattice_framework.hpp  parallel_two_step_framework.hpp  sequential_shift.hpp  sequential_swap.hpp  sequential_two_lattice.hpp  sequential_two_step.hpp  simulation.hpp  two_lattice_parallel.hpp  utils.hpp
new_sequential_implementation/: CMakeLists.txt  main.cpp  main_two_lattice.cpp  main_two_step.cpp
new_sequential_implementation/bob_the_builder/: Makefile  cmake_install.cmake  sequential_lbm
new_sequential_implementation/include/: access.hpp  boundaries.hpp  collision.hpp  defines.hpp  macroscopic.hpp  new_boundaries.hpp  new_collision.hpp  new_two_lattice.hpp  shift_sequential.hpp  simulation.hpp  swap_sequential.hpp  two_step_sequential.hpp  update.hpp  utils.hpp
new_sequential_implementation/src/: access.cpp  boundaries.cpp  collision.cpp  defines.cpp  macroscopic.cpp  new_collision.cpp  new_two_lattice.cpp  simulation.cpp  two_step_sequential.cpp  update.cpp
parallel_implementation/: CMakeLists.txt  innocent_main.cpp  main_shift.cpp  main_shift_framework.cpp  main_shift_framework_new.cpp  main_swap.cpp  main_swap_framework.cpp  main_two_lattice.cpp  main_two_lattice_framework.cpp  main_two_lattice_parallel.cpp  main_two_lattice_parallel_test.cpp  main_two_step.cpp  main_two_step_framework.cpp
parallel_implementation/include/: access.hpp  boundaries.hpp  defines.hpp  parallel_framework.hpp  parallel_shift_framework.hpp  parallel_shift_framework_new.hpp  parallel_swap_framework.hpp  parallel_two_lattice_framework.hpp  parallel_two_step_framework.hpp  sequential_shift.hpp  sequential_swap.hpp  shift_sequential.hpp  shift_sequential_new.hpp  simulation.hpp  swap_sequential.hpp  two_lattice_parallel.hpp  two_lattice_parallel_test.hpp  two_lattice_sequential.hpp  two_step_sequential.hpp  utils.hpp
parallel_implementation/src/: access.cpp  boundaries.cpp  collision.cpp  macroscopic.cpp  parallel_framework.cpp  parallel_outstream_framework.cpp  parallel_shift_framework.cpp  parallel_shift_framework_new.cpp  parallel_swap_framework.cpp  parallel_two_lattice_framework.cpp  parallel_two_step_framework.cpp  sequential_two_lattice.cpp  shift_sequential.cpp  shift_sequential_new.cpp  simulation.cpp  swap_sequential.cpp  two_lattice_parallel.cpp  two_lattice_sequential.cpp  two_step_sequential.cpp
runtimes/: strong_scaling_readable.csv  strong_scaling_results.csv  weak_scaling_readable.csv  weak_scaling_results.csv
runtimes/good/: strong_scaling_results.csv
sequential_implementation/: CMakeLists.txt  access.cpp  access.hpp  boundaries.cpp  boundaries.hpp  defines.cpp  defines.hpp  gauss_hermite_quadrature.cpp  macroscopic.hpp  main.cpp  main_shift.cpp  main_swap.cpp  main_two_lattice.cpp  main_two_lattice_experimental.cpp  main_two_step.cpp  math_utils.cpp  simulation.cpp  total_inclusion.hpp  update.cpp  update.hpp  utils.cpp  utils.hpp
sequential_implementation/bob_the_builder/: CMakeCache.txt  Makefile  cmake_install.cmake  sequential_lbm
sequential_implementation/include/: access.hpp  boundaries.hpp  defines.hpp  macroscopic.hpp  shift_sequential.hpp  shift_sequential_new.hpp  simulation.hpp  simulation_in_cool.hpp  swap_sequential.hpp  two_lattice_sequential.hpp  two_lattice_sequential_experimental.hpp  two_step_sequential.hpp  update.hpp  utils.hpp
sequential_implementation/src/: access.cpp  boundaries.cpp  collision.cpp  defines.cpp  macroscopic.cpp  shift_sequential.cpp  shift_sequential_new.cpp  simulation.cpp  simulation_in_cool.cpp  swap_sequential.cpp  two_lattice_sequential.cpp  two_lattice_sequential_experimental.cpp  two_step_sequential.cpp  update.cpp
src/: boundaries.cpp  collision.cpp  defines.cpp  file_interaction.cpp  lbm_execution.cpp  macroscopic.cpp  parallel_framework.cpp  parallel_shift_framework.cpp  parallel_swap_framework.cpp  parallel_two_lattice.cpp  parallel_two_lattice_framework.cpp  parallel_two_step_framework.cpp  sequential_shift.cpp  sequential_swap.cpp  sequential_two_lattice.cpp  sequential_two_step.cpp  simulation.cpp  two_lattice_parallel.cpp
visualization/: csv_resorter.py  evaluate_benchmark.py  evaluate_benchmark_new.py  runtime_strong_scaling.py  runtime_weak_scaling.py  strong_scaling.py  visualize_flow.py  weak_scaling.py
